RA-438: Lottery numbers now four columns, not five

--- a/src/SFA.Apprenticeships.Web.Manage/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Manage/Content/_assets/scss/modules/_vacancy.scss
@@ -166,7 +166,7 @@ h2{
     }
 }
 
-.vacancies-summary {
+ul.vacancies-summary {
     li {
         @media screen and ( max-width: 640px ) {
             padding: 0 10px;
