--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
@@ -194,26 +194,13 @@ button.vacancy-order {
     }
 }
 
-.vacancies-summary {
-    li {
-        @media screen and ( max-width: 640px ) {
-            padding: 0 10px;
-            width: ( 100% / 1 );
-        }
-        @media screen and ( min-width: 641px ) and ( max-width: 768px ) {
-            padding: 0 10px 0 0;
-            width: ( 100% / 3 );
-            margin-bottom: 10px;
-        }
-        @media screen and ( min-width: 769px ) {
-            padding: 0 10px 0 0;
-            width: ( 100% / 5 );
-            margin-bottom: 10px;
-        }
-    }
+ul.vacancies-summary{
+    display: table;
+    width: 100%;
+    margin-bottom: 15px;
 }
 
-.applications-summary {
+ul.vacancies-summary, ul.applications-summary {
     li {
         @media screen and ( max-width: 640px ) {
             padding: 0 10px;
