RA-438: Underline lottery numbers

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -149,7 +149,7 @@
                     <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new VacanciesSummarySearchViewModel(Model.VacanciesSummary.VacanciesSummarySearch, VacanciesSummaryFilterTypes.Live).RouteValues)" class="vacancy-filter">
                         <figure class="data">
                             <p class="count">@Model.VacanciesSummary.LiveCount</p>
-                            <figcaption>
+                            <figcaption class="underline">
                                 <h2>Live</h2>
                             </figcaption>
                         </figure>
@@ -185,7 +185,7 @@
                         <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new VacanciesSummarySearchViewModel(Model.VacanciesSummary.VacanciesSummarySearch, VacanciesSummaryFilterTypes.NewApplications).RouteValues)" class="vacancy-filter">
                             <figure class="data">
                                 <p class="count">@Model.VacanciesSummary.NewApplicationsAcrossAllVacanciesCount</p>
-                                <figcaption>
+                                <figcaption class="underline">
                                     <h2>New application</h2>
                                 </figcaption>
                             </figure>
@@ -196,7 +196,7 @@
                         <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new VacanciesSummarySearchViewModel(Model.VacanciesSummary.VacanciesSummarySearch, VacanciesSummaryFilterTypes.NewApplications).RouteValues)" class="vacancy-filter">
                             <figure class="data">
                                 <p class="count">@Model.VacanciesSummary.NewApplicationsAcrossAllVacanciesCount</p>
-                                <figcaption>
+                                <figcaption class="underline">
                                     <h2>New applications</h2>
                                 </figcaption>
                             </figure>
@@ -219,7 +219,7 @@
                     <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new VacanciesSummarySearchViewModel(Model.VacanciesSummary.VacanciesSummarySearch, VacanciesSummaryFilterTypes.Rejected).RouteValues)" class="vacancy-filter">
                         <figure class="data">
                             <p class="count">@Model.VacanciesSummary.RejectedCount</p>
-                            <figcaption>
+                            <figcaption class="underline">
                                 <h2>Referred</h2>
                             </figcaption>
                         </figure>
@@ -241,7 +241,7 @@
                     <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new VacanciesSummarySearchViewModel(Model.VacanciesSummary.VacanciesSummarySearch, VacanciesSummaryFilterTypes.ClosingSoon).RouteValues)" class="vacancy-filter">
                         <figure class="data">
                             <p class="count">@Model.VacanciesSummary.ClosingSoonCount</p>
-                            <figcaption>
+                            <figcaption class="underline">
                                 <h2>Closing soon</h2>
                             </figcaption>
                         </figure>
@@ -263,7 +263,7 @@
                     <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new VacanciesSummarySearchViewModel(Model.VacanciesSummary.VacanciesSummarySearch, VacanciesSummaryFilterTypes.Draft).RouteValues)" class="vacancy-filter">
                         <figure class="data">
                             <p class="count">@Model.VacanciesSummary.DraftCount</p>
-                            <figcaption>
+                            <figcaption class="underline">
                                 <h2>Draft</h2>
                             </figcaption>
                         </figure>
@@ -285,7 +285,7 @@
                     <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new VacanciesSummarySearchViewModel(Model.VacanciesSummary.VacanciesSummarySearch, VacanciesSummaryFilterTypes.Submitted).RouteValues)" class="vacancy-filter">
                         <figure class="data">
                             <p class="count">@Model.VacanciesSummary.SubmittedCount</p>
-                            <figcaption>
+                            <figcaption class="underline">
                                 <h2>Submitted</h2>
                             </figcaption>
                         </figure>
@@ -307,7 +307,7 @@
                     <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new VacanciesSummarySearchViewModel(Model.VacanciesSummary.VacanciesSummarySearch, VacanciesSummaryFilterTypes.Closed).RouteValues)" class="vacancy-filter">
                         <figure class="data">
                             <p class="count">@Model.VacanciesSummary.ClosedCount</p>
-                            <figcaption>
+                            <figcaption class="underline">
                                 <h2>Closed</h2>
                             </figcaption>
                         </figure>
@@ -329,7 +329,7 @@
                     <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new VacanciesSummarySearchViewModel(Model.VacanciesSummary.VacanciesSummarySearch, VacanciesSummaryFilterTypes.Completed).RouteValues)" class="vacancy-filter">
                         <figure class="data">
                             <p class="count">@Model.VacanciesSummary.CompletedCount</p>
-                            <figcaption>
+                            <figcaption class="underline">
                                 <h2>Archived</h2>
                             </figcaption>
                         </figure>
