--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -342,7 +342,7 @@
         <div class="grid-wrapper">
         <div class="grid grid-1-1">
         <section>
-        <div class="tabbed-content no-border active width-all-1-1">
+        <div class="width-all-1-1">
         <table id="vacancies-table">
         <colgroup>
             <col class="t25">
