RA-438: Ordering links style

--- a/src/SFA.Apprenticeships.Web.Candidate/Content/_assets/css/main-ie8.css
+++ b/src/SFA.Apprenticeships.Web.Candidate/Content/_assets/css/main-ie8.css
@@ -5721,6 +5721,9 @@ details summary:focus {
 .med-btm-margin {
   margin-bottom: 10px; }
 
+.lrg-btm-margin {
+  margin-bottom: 20px; }
+
 .small-top-padding {
   padding-top: 5px; }
 
