--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/components/_forms.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/components/_forms.scss
@@ -557,6 +557,7 @@ input::-webkit-inner-spin-button {
     padding-bottom:6px;
     padding-left:13px;
     padding-right:12px;
+    width: 48px;
     & span {
       position: absolute;
       left:-5000px;     
