--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main.css
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main.css
@@ -5551,6 +5551,9 @@ details summary:focus {
 .lrg-btm-margin {
   margin-bottom: 20px; }
 
+.xlrg-btm-margin {
+  margin-bottom: 50px; }
+
 .small-top-padding {
   padding-top: 5px; }
 
