RA-438: Fixing style on search box and adding vacancy search mode

--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/components/_forms.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/components/_forms.scss
@@ -540,7 +540,7 @@ input::-webkit-inner-spin-button {
     box-sizing: border-box;
     padding-right:47px;
     width:100%;
-    input[type="search"] {
+    input[type="text"] {
       padding-top:7px;
       padding-bottom: 4px;
       padding-left: 7px;
