--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main-ie8.css
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main-ie8.css
@@ -4333,7 +4333,7 @@ input::-webkit-inner-spin-button {
     box-sizing: border-box;
     padding-right: 47px;
     width: 100%; }
-    .search-bar .search-input-wrapper input[type="search"] {
+    .search-bar .search-input-wrapper input[type="text"] {
       padding-top: 7px;
       padding-bottom: 4px;
       padding-left: 7px;
